# helloword_template

./: README.md
helloword_template/: LICENSE  Makefile.am  README.autotools.md  configure.ac
helloword_template/src/: Makefile.am
helloword_template/src/helloworld/: hello.cpp  hello.h  main.cpp
helloword_template/src/helloworld/factory/: singleton_factory.h
helloword_template/unittests/: Makefile.am
helloword_template/unittests/testcode/: sample_unittest.cpp
